--- a/ec2_deploy.yml
+++ b/ec2_deploy.yml
@@ -8,7 +8,7 @@
         assign_public_ip: yes
         instance_type: "t2.micro"
         region: "us-east-2"
-        image: "ami-0de7daa7385332688"
+        image: "ami-0de7daa7385332688"                                            # ubuntu imag e"ami-0de7daa7385332688"
         vpc_subnet_id: "subnet-972c4fed"
-
+        count: 1
 
